--- a/Cadastro.html
+++ b/Cadastro.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="divlogo">
             <a href="Index.html">
-                <img class="logo" src="img/LogoA.png" alt="Logo acapra">
+                <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
         <div class="divajuda">
@@ -86,10 +86,9 @@
     </form>
   </section>
 
-
     <footer class="footer">
         <div class="footer-left">
-            <img src="img/LogoA.png" alt="Logo Acapra" class="logo">
+            <img src="assets/imagens/logo roxa.png" alt="Logo Acapra" class="logo">
             <p>
                 A ACAPRA é uma ONG em Brusque dedicada ao resgate, cuidado e adoção de cães.
                 Nossa missão é dar uma nova chance a animais abandonados, garantindo amor e proteção.
