--- a/HistoriasAni.html
+++ b/HistoriasAni.html
@@ -17,8 +17,8 @@
             </div>
         </nav>
         <div class="divlogo">
-            <a href="index.html">
-                <img class="logo" src="img/LogoA.png" alt="Logo acapra">
+            <a href="Index.html">
+                <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
         <div class="divajuda">
@@ -95,7 +95,7 @@
     
     <footer class="footer">
         <div class="footer-left">
-            <img src="img/LogoA.png" alt="Logo Acapra" class="logo">
+            <img src="assets/imagens/logo roxa.png" alt="Logo Acapra" class="logo">
             <p>
                 A ACAPRA é uma ONG em Brusque dedicada ao resgate, cuidado e adoção de cães.
                 Nossa missão é dar uma nova chance a animais abandonados, garantindo amor e proteção.
@@ -105,7 +105,7 @@
         <div class="footer-right">
             <h3>Como Ajudar?</h3>
             <ul>
-                <li><a href="escolha.html">Quero Adotar</a></li>
+                <li><a href="Adotar.html">Quero Adotar</a></li>
                 <li><a target="_blank" href="https://www.instagram.com/acaprabrusquesc/">Redes sociais</a> </li>
                 <li><a href="Cadastro.html">Cadastro</a></li>
                 <li>Doe através no pix: 03.772.251.0001-82</li>
