--- a/cachorros.html
+++ b/cachorros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acapra</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/LogoA.png" type="image/x-icon">
+    <link rel="icon" href="assets/imagens/logo roxa.png" type="image/x-icon">
     <link rel="stylesheet" href="cachorros.css">
 </head>
 
@@ -19,7 +19,7 @@
         </nav>
         <div class="divlogo">
             <a href="Index.html">
-                <img class="logo" src="img/LogoA.png" alt="Logo acapra">
+                <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
         <div class="divajuda">
@@ -424,7 +424,7 @@
 
     <footer class="footer">
         <div class="footer-left">
-            <img src="img/LogoA.png" alt="Logo Acapra" class="logo">
+            <img src="assets/imagens/logo roxa.png" alt="Logo Acapra" class="logo">
             <p>
                 A ACAPRA é uma ONG em Brusque dedicada ao resgate, cuidado e adoção de cães.
                 Nossa missão é dar uma nova chance a animais abandonados, garantindo amor e proteção.
