--- a/estatistica.html
+++ b/estatistica.html
@@ -9,9 +9,19 @@
 </head>
 <body>
     <header>
-        <button class="menu">☰</button>
-        <img class="logo" src="assets/imagens/símbolo acapra.jpg" alt="Logo acapra">
-        <button class="ajuda">Ajuda</button>
+        <nav>
+            <div class="divmenu">
+                <a href="menu.html" class="menu"><b>☰</b></a>
+            </div>
+        </nav>
+        <div class="divlogo">
+            <a href="Index.html">
+                <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
+            </a>
+        </div>
+        <div class="divajuda">
+            <a href="Ajuda.html" class="ajuda"><b>Ajuda</b></a>
+        </div>
     </header>
 
     <main>
@@ -30,7 +40,7 @@
 
     <footer class="footer">
         <div class="footer-left">
-            <img src="assets/imagens/símbolo acapra vermelho.png" alt="Logo Acapra" class="logo">
+            <img src="assets/imagens/logo roxa.png" alt="Logo Acapra" class="logo">
             <p>
                 A ACAPRA é uma ONG em Brusque dedicada ao resgate, cuidado e adoção de cães.
                 Nossa missão é dar uma nova chance a animais abandonados, garantindo amor e proteção.
