--- a/index.html
+++ b/index.html
@@ -14,19 +14,16 @@
     <header>
         <nav>
             <div class="divmenu">
-                <a href="menu.html">
-                    <button class="menu"><b>☰</b></button>
-                </a>
+                <a href="menu.html" class="menu"><b>☰</b></a>
             </div>
         </nav>
         <div class="divlogo">
-            
-                <img class="logo" src="assets/imagens/símbolo acapra.png" alt="Logo acapra">
-            
-
+            <a href="Index.html">
+                <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
+            </a>
         </div>
         <div class="divajuda">
-            <button class="ajuda"><b>Ajuda</b></button>
+            <a href="Ajuda.html" class="ajuda"><b>Ajuda</b></a>
         </div>
     </header>
     <main>
@@ -53,7 +50,7 @@
     </main>
     <footer class="footer">
         <div class="footer-left">
-            <img src="assets/imagens/símbolo acapra.png" alt="Logo Acapra" class="logo">
+            <img src="assets/imagens/logo roxa.png" alt="Logo Acapra" class="logo">
             <p>
                 A ACAPRA é uma ONG em Brusque dedicada ao resgate, cuidado e adoção de cães.
                 Nossa missão é dar uma nova chance a animais abandonados, garantindo amor e proteção.
@@ -63,7 +60,7 @@
         <div class="footer-right">
             <h3>Como Ajudar?</h3>
             <ul>
-                <li><a href="escolha.html">Quero Adotar</a></li>
+                <li><a href="Adotar.html">Quero Adotar</a></li>
                 <li><a target="_blank" href="https://www.instagram.com/acaprabrusquesc/">Redes sociais</a> </li>
                 <li><a href="Cadastro.html">Cadastro</a></li>
                 <li>Doe através no pix: 03.772.251.0001-82</li>
