--- a/HistoriasAni.html
+++ b/HistoriasAni.html
@@ -105,7 +105,7 @@
         <div class="footer-right">
             <h3>Como Ajudar?</h3>
             <ul>
-                <li><a href="Adotar.html">Quero Adotar</a></li>
+                <li><a href="escolha.html">Quero Adotar</a></li>
                 <li><a target="_blank" href="https://www.instagram.com/acaprabrusquesc/">Redes sociais</a> </li>
                 <li><a href="Cadastro.html">Cadastro</a></li>
                 <li>Doe através no pix: 03.772.251.0001-82</li>
