--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
             </div>
         </nav>
         <div class="divlogo">
-            <a href="Index.html">
+            <a href="index.html">
                 <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
@@ -68,4 +68,5 @@
     </footer>
 </body>
 </html>
+
 
