--- a/Historia.html
+++ b/Historia.html
@@ -17,7 +17,7 @@
             </div>
         </nav>
         <div class="divlogo">
-            <a href="Index.html">
+            <a href="index.html">
                 <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
