--- a/escolha.html
+++ b/escolha.html
@@ -15,7 +15,7 @@
             </div>
         </nav>
         <div class="divlogo">
-            <a href="Index.html">
+            <a href="index.html">
                 <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
@@ -61,4 +61,5 @@
     </footer>
 </body>
 </html>
+
 
