--- a/cachorros.html
+++ b/cachorros.html
@@ -18,7 +18,7 @@
             </div>
         </nav>
         <div class="divlogo">
-            <a href="Index.html">
+            <a href="index.html">
                 <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
@@ -443,4 +443,5 @@
 </body>
 
 </html>
+
 
