--- a/Cadastro.html
+++ b/Cadastro.html
@@ -18,7 +18,7 @@
             </div>
         </nav>
         <div class="divlogo">
-            <a href="index.html">
+            <a href="Index.html">
                 <img class="logo" src="assets/imagens/logo roxa.png" alt="Logo acapra">
             </a>
         </div>
